# obs-spotify-bridge

./: Cargo.toml  README.md  renovate.json
.github/workflows/: actionlint.yml  release.yml  review.yml  validate-renovate.yml
src/: main.rs  model.rs
src/discordapi/: mod.rs  model.rs
src/discordws/: mod.rs  model.rs
src/filter/: mod.rs
src/notify_model/: mod.rs
src/obsdriver/: mod.rs  model.rs
src/spotifyapi/: mod.rs  model.rs
src/spotifyws/: mod.rs  model.rs
src/wsserver/: mod.rs  model.rs
