[package]
edition = "2021"
name = "obs-spotify-bridge"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
envy = "0.4.2"
futures = "0.3.31"
futures-util = "0.3.31"
itertools = "0.13.0"
reqwest = { version = "0.12.9", features = ["native-tls", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = [
	"rt-multi-thread",
	"macros",
	"time",
	"sync",
	"signal",
] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
obws = "0.13.0"
